fix(ActionSheet): fix overflow for adroid and ios

--- a/src/components/ActionSheet/ActionSheet.css
+++ b/src/components/ActionSheet/ActionSheet.css
@@ -1,6 +1,6 @@
 .ActionSheet {
   position: relative;
-  overflow: hidden;
+  overflow: auto;
   box-shadow: var(--vkui--elevation3);
   width: calc(100% - 20px);
   align-items: stretch;
