--- a/src/components/PopoutWrapper/PopoutWrapper.css
+++ b/src/components/PopoutWrapper/PopoutWrapper.css
@@ -55,6 +55,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  max-height: 100%;
   z-index: 2;
   pointer-events: none;
 }
